--- a/app/assets/stylesheets/modules/_modal.scss
+++ b/app/assets/stylesheets/modules/_modal.scss
@@ -1,106 +1,19 @@
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ modals */
-.modal-wrapper {
-    display: none;
-    width: 800px;
-    background: #333;
-    padding: 5px;
-    border-radius: 2px;
-    -webkit-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    -ms-transition: all 0.2s ease-out;
-    -o-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;
-    box-shadow: 0 1px 2px #000;
-   
-   h2 {
-        text-transform: capitalize;
-        padding: 5px 0 10px 10px;
-        color: #ccc;
-    }
-    .content-wrap {
-        border-radius: 2px 2px 0 0;
-    }
-
-    .controls {
-        background: #f7f7f7;
-        padding: 10px;
-        border-radius: 0 0 2px 2px;
-        
-        .save {
-            float: right;
-        }
-    }
-    
-    .input {
-        border-bottom: 1px solid #dadada;
-        background: #fff;
-        
-        &.text {
-          
-            label {
-                display: inline-block;
-                width: 40px;
-                padding: 15px;
-                border-right: 1px dotted #dadada;
-                
-                .required {
-                    display: none;
-                }
-            }
-            input {
-                padding: 15px;
-                width: 690px;
-                border: 0;
-            }
-        }
-        
-        &.error {
-            label {
-                color: #FF7373;
-            }
-        }
-        
-        &.first {
-            border-radius: 2px 2px 0 0;
-        }
-        
-        .errorMessage {
-            height: 0;
-            overflow: hidden;
-        }
-    }
-    
-    .errorSummary {
-        font-size: 12px;
-        color: #333;
-        background: #FFB5B5;
-        margin-bottom: 5px;
-        padding: 8px 15px 5px 50px;
-        border-radius: 2px;
-        position: relative;
-        min-height: 20px;
-
-        .icon {
-            position: absolute;
-            left: 15px;
-            top: 5px;
-            color: #fff;
-            font-size: 20px;
-            height: 20px;
-            width: 20px;
-        }
-    }
-}
-    
 /*~~~~~~~~~~~~~~ simplemodal*/
 #simplemodal-overlay {
     display: none;
     opacity: 0.9!important;
-    background: #999;
+    background: #000;
     z-index: 100;
 }
 .simplemodal-close {
     position: absolute;
-    top: 11px;
-    right: 8px;
+    top: -45px;
+    right: -45px;
+    
+    &.icon.icon-cross {
+        font-size: 40px;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+    }
 }
