--- a/app/assets/stylesheets/modules/_profile.scss
+++ b/app/assets/stylesheets/modules/_profile.scss
@@ -138,4 +138,92 @@
     .profile-user-bio {
         @include box();
     }
+    
+    .profile-user-portfolio {
+        .portfolio-item {
+            @include box();
+            position: relative;
+            
+            h3 {
+                font-size: 20px;
+                width: 300px;
+                margin: 0 0 10px 0;
+            }
+            li {
+               float: left;
+               margin-right: 20px;
+               font-size: 12px;
+            }
+            .view-video {
+                position: absolute;
+                right: 10px;
+                color: #fff;
+                top: 10px;
+                background: $green;
+                padding: 20px;
+                font-size: 12px;
+                border: 0;
+                
+                .icon {
+                    color: #fff;
+                    font-size: 25px;
+                    width: 25px;
+                    height: 25px;
+                }
+            }
+            
+        }
+    }
+    
+    &.me {
+        #user_image_path {
+            position: absolute;
+            width: 200px;
+            height: 200px;
+            top: 20px;
+            left: 20px;
+            visibility: none;
+            opacity: 0;
+            cursor: pointer;
+        }
+        
+        .editable {
+            cursor: pointer;
+        }
+        
+        .me-form-group {
+            display: none;
+            
+            input {
+                margin-bottom: 5px;
+            }
+            
+            .btns {
+                a {
+                    margin-left: 10px;
+                    font-size: 12px;
+                    cursor: pointer;
+                }
+            }
+        }
+        
+        .profile-user-bio textarea {
+            width: 100%;
+            height: 200px;
+            font-size: 14px;
+        }
+        
+    }
+}
+
+.embed {
+    display: none;
+    width: 853px;
+    height: 480px;
+    background: #000;
+    
+    iframe {
+        width: 853px;
+        height: 480px;
+    }
 }
