--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -17,6 +17,9 @@
             position: absolute;
             left: 20px;
             top: 20px;
+            width: 100px;
+            height: 100px;
+            border-radius: 2px;
         }
         
         h3 {
