--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -29,7 +29,7 @@ textarea, .textareaClone {
 .login-form {
     @include box;
     width: 420px;
-    margin: 60px auto 0 auto;
+    margin: 0 auto;
     padding: 0;
     position: relative;
     
@@ -77,7 +77,31 @@ textarea, .textareaClone {
         }
     }
     
-    
+   &.register {
+      width: 800px;
+      
+      .inner-form-wrap {
+          padding: 0;
+      }
+      
+      .left-col {
+          float: left;
+          width: 319px;
+          border-right: 1px solid #e5e5e5;
+          padding: 40px;
+      }
+      .right-col {
+          float: right;
+          width: 320px;
+          padding: 40px;
+      }
+      .buttons {
+          clear: both;
+          border-top: 1px solid #e5e5e5;
+          padding: 20px;
+          height: 34px;
+      }
+   } 
 }
 
 .devise-links {
