--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -1,34 +1,23 @@
-<%= form_for @user, :html => {:autocomplete => "off"} do |f| %>
 
-        
-        
-        
-
-    
-
-
-<!-- <h3>Jobs</h3> -->
-<% # render :partial => 'job', :collection => @jobs %>
-<% # render :partial => 'jobs/form', :locals => {:job => Job.new} %>
 
 <div class="profile me">
     
      <div class="profile-header">
-        
-        <%= image_tag @user.image_path.url(:profile) %>
-        <div><%= f.file_field :image_path %></div>
-        
-        <h1 class="editable" data-form-class="name"><%= @user.full_name %></h1>
-        
-        <div class="me-form-group name">
-            <%= f.text_field :first_name, :placeholder => "First Name", :autocomplete => "off" %>
-            <%= f.text_field :last_name, :placeholder => "Last Name", :autocomplete => "off" %>
-            <div class="btns">
-                <%= f.submit "Done Editing" %>
-                <a class="cancel">cancel</a>
+        <%= form_for @user, :html => {:autocomplete => "off"} do |f| %>
+            <%= image_tag @user.image_path.url(:profile) %>
+            <div><%= f.file_field :image_path %></div>
+            
+            <h1 class="editable" data-form-class="name"><%= @user.first_name %></h1>
+            
+            <div class="me-form-group name">
+                <%= f.text_field :first_name, :placeholder => "First Name", :autocomplete => "off" %>
+                <%= f.text_field :last_name, :placeholder => "Last Name", :autocomplete => "off" %>
+                <div class="btns">
+                    <%= f.submit "Done Editing" %>
+                    <a class="cancel">cancel</a>
+                </div>
             </div>
-        </div>
-        
+        <% end %>
     </div>
     
     <div class="user-info">
@@ -45,16 +34,18 @@
             <span class="editable" data-form-class="my-location"><span class="icon icon-location"></span><%= @user.location.city %>, <%= @user.location.state %></span> 
             
             <div class="me-form-group my-location">
-            <%= f.fields_for :location do |l| %>
-                <div>
-                    <%= l.text_field :city, :placeholder => 'City' %>, 
-                    <%= l.text_field :state, :placeholder => 'State' %>
-                </div>
-                <div class="btns">
-                    <%= f.submit "Done Editing" %>
-                    <a class="cancel">cancel</a>
-                </div>
-            <% end %>
+                <%= form_for @user, :namespace =>'location', :html => {:autocomplete => "off"} do |f| %>
+                    <%= f.fields_for :location do |l| %>
+                        <div>
+                            <%= l.text_field :city, :placeholder => 'City' %>, 
+                            <%= l.text_field :state, :placeholder => 'State' %>
+                        </div>
+                        <div class="btns">
+                            <%= f.submit "Done Editing" %>
+                            <a class="cancel">cancel</a>
+                        </div>
+                    <% end %>
+                <% end %>
             </div>
         </div> 
         <div class="clb"></div>
@@ -72,8 +63,10 @@
     </div>
     
     <div class="profile-info-item profile-user-bio">
-        <%= f.text_area :about, :placeholder => "About Me" %>
-        <%= f.submit "Update About" %>
+        <%= form_for @user, :namespace =>'about', :html => {:autocomplete => "off"} do |f| %>
+            <%= f.text_area :about, :placeholder => "About Me" %>
+            <%= f.submit "Update About" %>
+        <% end %>
     </div>
     
     <div class="profile-info-item profile-user-portfolio">
@@ -86,9 +79,7 @@
     
     <div class="profile-info-item profile-user-following">
         following
-    </div>      
-    
-    <% end %>
+    </div>
     
     <div class="profile-info-item profile-user-posts active">
     
